I added new parts and fixed errors.